--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO/GUdsDCKpZgVqLF4j6F4",
+      "authorship_tag": "ABX9TyPKQGFccXSeggWEr4IdeHoA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,12 +112,58 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "dataset = pd.read_csv('drowsy.csv')\n",
+        "print(dataset)\n",
+        "\n",
+        "features = pd.read_csv('drowsy.csv',usecols=[0,1,2,3])\n",
+        "labels = pd.read_csv('drowsy.csv', usecols = [4])\n",
+        "\n",
+        "knn = KNeighborsClassifier(n_neighbors=1)\n",
+        "knn.fit(features,labels)\n",
+        "print(knn.predict([[0.4,7,0,18]]))\n",
+        "print(knn.score(features,labels))"
+      ],
       "metadata": {
-        "id": "hZtmKEPaZfFC"
+        "id": "hZtmKEPaZfFC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f5d5667-7dbb-4af1-fb45-6d9a294b0f48"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    EAR  blinkrate  yawncount  time  result\n",
+            "0  0.30         10          1     9  Drowsy\n",
+            "1  0.50         15          0    13   Alert\n",
+            "2  0.25         12          2     8  Drowsy\n",
+            "3  0.60          5          0    19   Alert\n",
+            "4  0.28          8          1    14  Drowsy\n",
+            "5  0.70          3          3    20   Alert\n",
+            "6  0.35          9          1     7  Drowsy\n",
+            "7  0.40          7          0    17   Alert\n",
+            "['Alert']\n",
+            "1.0\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/neighbors/_classification.py:238: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+            "  return self._fit(X, y)\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     }
   ]
 }
